app/assets/stylesheets/cohesive_admin/theme/_forms.scss
.input-field {
  > label { left: 0; }

  &.has-error {
    input:not([type]),
    input[type=text],
    input[type=password],
    input[type=email],
    input[type=url],
    input[type=time],
    input[type=date],
    input[type=datetime],
    input[type=datetime-local],
    input[type=tel],
    input[type=number],
    input[type=search],
    textarea.materialize-textarea {
      margin-bottom: 5px;
      border-bottom: $input-invalid-border;
      box-shadow: 0 1px 0 0 $input-error-color;
    }
    .error-block {
      margin: $input-margin;
      color: $input-error-color;
      font-size: $label-font-size;
    }
  }

  &.wysiwyg, &.code, &.refile > .file-field {
    padding-top: 1em;
    > label {
      font-size: 0.8rem;
      transform: translateY(-140%);
    }
  }
}

